			   XPCE ChangeLog
			   ==============

* ADDED: @monitor to frame->geometry specification.  Also added an extra
  monitor argument to most of the frame dimension methods.  Work in progress
  supporting multiple monitors.

* ADDED: Query available physical monitors.  See class monitor.  Added
  monitor argument to frame->center, frame->open_centered, etc. This 
  fixes Bug#82.  Holger Kanwischer.

* FIXED: regex->match on backward matches (executed as search).

* FIXED: PceEmacs: failing bracket highlighting on syntax errors.  Enhanced
  ->beginning_of_clause to be more careful with in-clause comments.  Fixed
  ->backward_clause on directives.


VERSION 6.6.9, distributed with SWI-Prolog 5.6.9
================================================

* FIXED: device->event to be safe against events changing the displayed
  graphicals.

* ADDED: PceEmacs colour support for the http/html_write library.

* ADDED: pce_xref/0: graphical frontend to the cross-referencer.  Many
  enhancements to the cross-referencer itself and its interaction with the
  other libraries.

* FIXED: PceEmacs: colouring lists as a goal (consult).

* ENHANCED: library(pce_toc).  Allow hooking collapse of a node.  See
  ->collapse_node.

VERSION 6.6.8, distributed with SWI-Prolog 5.6.8
================================================

* FIXED: PceEmacs: caret positioning issues on syntax errors in Prolog
  mode.

* ADDED: display->x11_threads.  Provides a work-around for MacOS X11
  problems.

VERSION 6.6.7, distributed with SWI-Prolog 5.6.7
================================================

* FIXED: Do not initialize XLib threads on MacOS to avoid a deadlock entering
  certain keys.  Reported several times.

* ADDED: Allow binding different X11 modifiers to the Meta Key.
  See display->meta_modifier.  By default bind Meta to the Mac command-key.


VERSION 6.6.6, distributed with SWI-Prolog 5.6.6
================================================
